packages/svelte/tests/compiler-errors/samples/invalid-snippet-mutation/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'snippet_parameter_assignment',
		message: 'Cannot reassign or bind to snippet parameter'
	}
});
